feat: move k8s crossplane provider config from aws overlay to base

--- a/gitops/applications/base/crossplane-providers/kustomization.yaml
+++ b/gitops/applications/base/crossplane-providers/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - rbac.yaml
   - crossplane-providers.yaml
+  - crossplane-kubernetes-provider-config.yaml
 
 secretGenerator:
   - name: terraformrc
