ESO PushSecret for env clusters

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/push-storage-secrets-vault.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/deploy-env-onboard/push-storage-secrets-vault.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace # IfNotExists
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -26,8 +26,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -46,8 +46,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -66,8 +66,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -86,8 +86,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -106,8 +106,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
@@ -153,8 +153,8 @@ metadata:
   namespace: "${ARGOCD_ENV_storage_namespace}"
 spec:
   updatePolicy: Replace
-  deletionPolicy: None
-  refreshInterval: 1h
+  deletionPolicy: Delete
+  refreshInterval: 1m
   secretStoreRefs:
     - name: vault-secret-store
       kind: ClusterSecretStore
