Add Env buckets private cloud resources

--- a/gitops/applications/base/deploy-env-onboard/env-buckets.yaml
+++ b/gitops/applications/base/deploy-env-onboard/env-buckets.yaml
@@ -6,58 +6,103 @@ metadata:
   annotations:
     name: "${ARGOCD_ENV_env_name}"
 ---
-apiVersion: mojaloop.io/v1alpha1
-kind: S3BucketClaim
+apiVersion: objectstore.mojaloop.io/v1alpha1
+kind: ObjectStore
 metadata:
   name: "${ARGOCD_ENV_env_name}-loki-bucket"
-  namespace: "${ARGOCD_ENV_env_name}"
+  namespace:  ${ARGOCD_ENV_env_name}
 spec:
   parameters:
+    clusterName: ${ARGOCD_ENV_env_name}
+    objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "${ARGOCD_ENV_env_name}-loki"
-    bucketRegion: ${ARGOCD_ENV_cloud_region}
-    forceDestroy: true
-    deletionPolicy: "Delete"
-    providerConfigName: "aws-cp-upbound-provider-config"
-    destinationNamespace:  ${ARGOCD_ENV_env_name}
+    Namespace: ${ARGOCD_ENV_env_name}
+    s3:
+      awsProviderName: "aws-cp-upbound-provider-config"
+      bucketRegion: ${ARGOCD_ENV_cloud_region}
+      forceDestroy: true
+      deletionPolicy: "Delete"
+    ceph:
+      scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
+      ccK8sProviderName: "kubernetes-provider"
+      storageClassName: "ceph-bucket"
+      maxSize: "${ARGOCD_ENV_loki_bucket_storage_size}"
+      esoPushSecret: true
+      vaultSecretStore: "vault-secret-store"
+      vaultSecretPath: "${ARGOCD_ENV_env_name}/loki_bucket_access_key_id"
 ---
-apiVersion: mojaloop.io/v1alpha1
-kind: S3BucketClaim
+apiVersion: objectstore.mojaloop.io/v1alpha1
+kind: ObjectStore
 metadata:
   name: "${ARGOCD_ENV_env_name}-tempo-bucket"
-  namespace: "${ARGOCD_ENV_env_name}"
+  namespace:  ${ARGOCD_ENV_env_name}
 spec:
   parameters:
+    clusterName: ${ARGOCD_ENV_env_name}
+    objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "${ARGOCD_ENV_env_name}-tempo"
-    bucketRegion: ${ARGOCD_ENV_cloud_region}
-    forceDestroy: true
-    deletionPolicy: "Delete"
-    providerConfigName: "aws-cp-upbound-provider-config"
-    destinationNamespace:  ${ARGOCD_ENV_env_name}
+    Namespace: ${ARGOCD_ENV_env_name}
+    s3:
+      awsProviderName: "aws-cp-upbound-provider-config"
+      bucketRegion: ${ARGOCD_ENV_cloud_region}
+      forceDestroy: true
+      deletionPolicy: "Delete"
+    ceph:
+      scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
+      ccK8sProviderName: "kubernetes-provider"
+      storageClassName: "ceph-bucket"
+      maxSize: "${ARGOCD_ENV_tempo_bucket_storage_size}"
+      esoPushSecret: true
+      vaultSecretStore: "vault-secret-store"
+      vaultSecretPath: "${ARGOCD_ENV_env_name}/tempo_bucket_access_key_id"
+
 ---
-apiVersion: mojaloop.io/v1alpha1
-kind: S3BucketClaim
+apiVersion: objectstore.mojaloop.io/v1alpha1
+kind: ObjectStore
 metadata:
   name: "${ARGOCD_ENV_env_name}-velero-bucket"
-  namespace: "${ARGOCD_ENV_env_name}"
+  namespace:  ${ARGOCD_ENV_env_name}
 spec:
   parameters:
+    clusterName: ${ARGOCD_ENV_env_name}
+    objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "${ARGOCD_ENV_env_name}-velero"
-    bucketRegion: ${ARGOCD_ENV_cloud_region}
-    forceDestroy: true
-    deletionPolicy: "Delete"
-    providerConfigName: "aws-cp-upbound-provider-config"
-    destinationNamespace:  ${ARGOCD_ENV_env_name}
+    Namespace: ${ARGOCD_ENV_env_name}
+    s3:
+      awsProviderName: "aws-cp-upbound-provider-config"
+      bucketRegion: ${ARGOCD_ENV_cloud_region}
+      forceDestroy: true
+      deletionPolicy: "Delete"
+    ceph:
+      scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
+      ccK8sProviderName: "kubernetes-provider"
+      storageClassName: "ceph-bucket"
+      maxSize: "${ARGOCD_ENV_velero_bucket_storage_size}"
+      esoPushSecret: true
+      vaultSecretStore: "vault-secret-store"
+      vaultSecretPath: "${ARGOCD_ENV_env_name}/velero_bucket_access_key_id"
 ---
-apiVersion: mojaloop.io/v1alpha1
-kind: S3BucketClaim
+apiVersion: objectstore.mojaloop.io/v1alpha1
+kind: ObjectStore
 metadata:
   name: "${ARGOCD_ENV_env_name}-percona-bucket"
-  namespace: "${ARGOCD_ENV_env_name}"
+  namespace:  ${ARGOCD_ENV_env_name}
 spec:
   parameters:
+    clusterName: ${ARGOCD_ENV_env_name}
+    objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "${ARGOCD_ENV_env_name}-percona"
-    bucketRegion: ${ARGOCD_ENV_cloud_region}
-    forceDestroy: true
-    deletionPolicy: "Delete"
-    providerConfigName: "aws-cp-upbound-provider-config"
-    destinationNamespace:  ${ARGOCD_ENV_env_name}
+    Namespace: ${ARGOCD_ENV_env_name}
+    s3:
+      awsProviderName: "aws-cp-upbound-provider-config"
+      bucketRegion: ${ARGOCD_ENV_cloud_region}
+      forceDestroy: true
+      deletionPolicy: "Delete"
+    ceph:
+      scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
+      ccK8sProviderName: "kubernetes-provider"
+      storageClassName: "ceph-bucket"
+      maxSize: "${ARGOCD_ENV_percona_bucket_storage_size}"
+      esoPushSecret: true
+      vaultSecretStore: "vault-secret-store"
+      vaultSecretPath: "${ARGOCD_ENV_env_name}/percona_bucket_access_key_id"
