--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-operator/kustomization.yaml
@@ -7,3 +7,4 @@ helmCharts:
     version:  ${ARGOCD_ENV_capi_operator_version}
     repo: https://kubernetes-sigs.github.io/cluster-api-operator
     valuesFile: cluster-api-operator-values.yaml
+    namespace: ${ARGOCD_ENV_capi_operator_namespace}
