--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
@@ -242,9 +242,31 @@ spec:
     template:
       type: kubernetes.io/rook
       data:
-        rgw_endpoint: "{{ .RGW_ENDPOINT }}"
+        rgw-endpoint: "{{ .RGW_ENDPOINT }}"
   data:
     - secretKey: RGW_ENDPOINT
       remoteRef:
         key: rook-external-config
         property: RGW_ENDPOINT
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: rook-ceph-mon-data
+  namespace: ${ARGOCD_ENV_storage_namespace}
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: SecretStore
+    name: storage-secrets-store
+  target:
+    name: rook-ceph-mon-data
+    template:
+      type: kubernetes.io/rook
+      data:
+        rook-ceph-mon-data: "{{ .ROOK_EXTERNAL_CEPH_MON_DATA }}"
+  data:
+    - secretKey: ROOK_EXTERNAL_CEPH_MON_DATA
+      remoteRef:
+        key: rook-external-config
+        property: ROOK_EXTERNAL_CEPH_MON_DATA
