increase kyverno resources

--- a/gitops/applications/base/kyverno/kyverno-values.yaml
+++ b/gitops/applications/base/kyverno/kyverno-values.yaml
@@ -24,3 +24,11 @@ reportsController:
         - get
         - list
         - watch
+cleanupController:
+ resources:
+    limits:
+      # cpu: 500m
+      memory: 512Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 64Mi
