--- a/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/kustomization.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/kustomization.yaml
@@ -1,14 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-helmGlobals:
-  chartHome: ../helmcharts
-
-helmCharts:
-  - name: dbmr
-    releaseName: ${ARGOCD_ENV_release}
-    version: 0.1.0
-    valuesFile: db-values.yaml
-    namespace: ${ARGOCD_ENV_namespace}
 resources:
   - db-external-name-service.yaml
   - db-secrets.yaml
+  - rdscluster.yaml
