fix: update common vars

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -32,6 +32,11 @@ netbird_rds_skip_final_snapshot: "'true'"
 netbird_rds_postgres_storage_size: "'100'"
 netbird_rds_storage_type: "io1"
 netbird_rds_storage_iops: "'5000'"
+netbird_rds_allow_major_version_upgrade: "false"
+netbird_rds_apply_immediately: "false"
+netbird_rds_deletion_protection: "false"
+netbird_rds_final_snapshot_identifier: "netbird-rds-final-snapshot"
+netbird_rds_family: "aurora-postgresql16"
 #netbird db backup settings
 netbird_db_backup_retention_period: "'1'"
 netbird_db_preferred_backup_window: "07:00-09:00"
@@ -236,6 +241,11 @@ gitlab_rds_skip_final_snapshot: "'true'"
 gitlab_rds_postgres_storage_size: "'100'"
 gitlab_rds_storage_type: "io1"
 gitlab_rds_storage_iops: "'5000'"
+gitlab_rds_allow_major_version_upgrade: "false"
+gitlab_rds_apply_immediately: "false"
+gitlab_rds_deletion_protection: "false"
+gitlab_rds_final_snapshot_identifier: "gitlab-rds-final-snapshot"
+gitlab_rds_family: "aurora-postgresql16"
 #gitlab db backup settings
 gitlab_db_backup_retention_period: "'1'"
 gitlab_db_preferred_backup_window: "07:00-09:00"
@@ -254,6 +264,11 @@ praefect_rds_skip_final_snapshot: "'true'"
 praefect_rds_postgres_storage_size: "'100'"
 praefect_rds_storage_type: "io1"
 praefect_rds_storage_iops: "'5000'"
+praefect_rds_allow_major_version_upgrade: "false"
+praefect_rds_apply_immediately: "false"
+praefect_rds_deletion_protection: "false"
+praefect_rds_final_snapshot_identifier: "praefect-rds-final-snapshot"
+praefect_rds_family: "aurora-postgresql16"
 #praefect db backup settings
 praefect_db_backup_retention_period: "'1'"
 praefect_db_preferred_backup_window: "07:00-09:00"
@@ -285,6 +300,11 @@ zitadel_rds_skip_final_snapshot: "'true'"
 zitadel_rds_postgres_storage_size: "'100'"
 zitadel_rds_storage_iops: "'5000'"
 zitadel_rds_storage_type: "io1"
+zitadel_rds_allow_major_version_upgrade: "false"
+zitadel_rds_apply_immediately: "false"
+zitadel_rds_deletion_protection: "false"
+zitadel_rds_final_snapshot_identifier: "zitadel-rds-final-snapshot"
+zitadel_rds_family: "aurora-postgresql16"
 #Zitadel DB backup settings
 zitadel_db_backup_retention_period: "'1'"
 zitadel_db_preferred_backup_window: "07:00-09:00"
