fix: boolean values in config

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -32,9 +32,9 @@ netbird_rds_skip_final_snapshot: "'true'"
 netbird_rds_postgres_storage_size: "'100'"
 netbird_rds_storage_type: "io1"
 netbird_rds_storage_iops: "'5000'"
-netbird_rds_allow_major_version_upgrade: "false"
-netbird_rds_apply_immediately: "false"
-netbird_rds_deletion_protection: "false"
+netbird_rds_allow_major_version_upgrade: "'false'"
+netbird_rds_apply_immediately: "'false'"
+netbird_rds_deletion_protection: "'false'"
 netbird_rds_final_snapshot_identifier: "netbird-rds-final-snapshot"
 netbird_rds_family: "aurora-postgresql16"
 #netbird db backup settings
@@ -242,9 +242,9 @@ gitlab_rds_skip_final_snapshot: "'true'"
 gitlab_rds_postgres_storage_size: "'100'"
 gitlab_rds_storage_type: "io1"
 gitlab_rds_storage_iops: "'5000'"
-gitlab_rds_allow_major_version_upgrade: "false"
-gitlab_rds_apply_immediately: "false"
-gitlab_rds_deletion_protection: "false"
+gitlab_rds_allow_major_version_upgrade: "'false'"
+gitlab_rds_apply_immediately: "'false'"
+gitlab_rds_deletion_protection: "'false'"
 gitlab_rds_final_snapshot_identifier: "gitlab-rds-final-snapshot"
 gitlab_rds_family: "aurora-postgresql16"
 #gitlab db backup settings
@@ -265,9 +265,9 @@ praefect_rds_skip_final_snapshot: "'true'"
 praefect_rds_postgres_storage_size: "'100'"
 praefect_rds_storage_type: "io1"
 praefect_rds_storage_iops: "'5000'"
-praefect_rds_allow_major_version_upgrade: "false"
-praefect_rds_apply_immediately: "false"
-praefect_rds_deletion_protection: "false"
+praefect_rds_allow_major_version_upgrade: "'false'"
+praefect_rds_apply_immediately: "'false'"
+praefect_rds_deletion_protection: "'false'"
 praefect_rds_final_snapshot_identifier: "praefect-rds-final-snapshot"
 praefect_rds_family: "aurora-postgresql16"
 #praefect db backup settings
@@ -301,9 +301,9 @@ zitadel_rds_skip_final_snapshot: "'true'"
 zitadel_rds_postgres_storage_size: "'100'"
 zitadel_rds_storage_iops: "'5000'"
 zitadel_rds_storage_type: "io1"
-zitadel_rds_allow_major_version_upgrade: "false"
-zitadel_rds_apply_immediately: "false"
-zitadel_rds_deletion_protection: "false"
+zitadel_rds_allow_major_version_upgrade: "'false'"
+zitadel_rds_apply_immediately: "'false'"
+zitadel_rds_deletion_protection: "'false'"
 zitadel_rds_final_snapshot_identifier: "zitadel-rds-final-snapshot"
 zitadel_rds_family: "aurora-postgresql16"
 #Zitadel DB backup settings
