--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -55,7 +55,7 @@ spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/aws-docdbcluster:${ARGOCD_ENV_crossplane_packages_aws_documentdb_version}
   skipDependencyResolution: true
 ---
-apiVersion: pkg.crossplane.io/v1alpha1
+apiVersion: pkg.crossplane.io/v1
 kind: Configuration
 metadata:
   name: aws-rdscluster
