--- a/gitops/applications/overlays/rdbms_provider/rds/db/rdscluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/rdscluster.yaml
@@ -13,12 +13,12 @@ spec:
     applyImmediately: ${ARGOCD_ENV_apply_immediately}
     backupRetentionPeriod: ${ARGOCD_ENV_backup_retention_period}
     databaseName: "${ARGOCD_ENV_db_name}"
-    dbClusterInstanceClass: "${ARGOCD_ENV_rds_instance_class}"
+    dbClusterInstanceClass: "${ARGOCD_ENV_instance_class}"
     deletionProtection: ${ARGOCD_ENV_deletion_protection}
-    engine: ${ARGOCD_ENV_rds_engine}
-    engineVersion: "${ARGOCD_ENV_rds_engine_version}"
+    engine: ${ARGOCD_ENV_engine}
+    engineVersion: "${ARGOCD_ENV_engine_version}"
     family: ${ARGOCD_ENV_family}
-    instanceCount: ${ARGOCD_ENV_rds_replica_count}
+    instanceCount: ${ARGOCD_ENV_replica_count}
     parameter: []
     passwordSecret:
       key: "password"
@@ -28,12 +28,12 @@ spec:
     preferredBackupWindow: "${ARGOCD_ENV_preferred_backup_window}"
     preferredMaintenanceWindow: ${ARGOCD_ENV_preferred_maintenance_window}
     region: "${ARGOCD_ENV_cloud_region}"
-    skipFinalSnapshot: ${ARGOCD_ENV_rds_skip_final_snapshot}
+    skipFinalSnapshot: ${ARGOCD_ENV_skip_final_snapshot}
     finalSnapshotIdentifier: "${ARGOCD_ENV_final_snapshot_identifier}"
-    storageEncrypted: ${ARGOCD_ENV_rds_storage_encrypted}
+    storageEncrypted: ${ARGOCD_ENV_storage_encrypted}
     storageType: "${ARGOCD_ENV_storage_type}"
-    allocatedStorage: ${ARGOCD_ENV_rds_postgres_storage_size}
-    subnets: ${ARGOCD_ENV_rds_subnet_list}
+    allocatedStorage: ${ARGOCD_ENV_postgres_storage_size}
+    subnets: ${ARGOCD_ENV_subnet_list}
     username: ${ARGOCD_ENV_db_username}
     vpcCidr: ${ARGOCD_ENV_vpc_cidr}
     vpcId: ${ARGOCD_ENV_vpc_id}
