--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -186,25 +186,25 @@ spec:
           - name: "rds_postgres_storage_size"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_postgres_storage_size}"
 
-          - name: "rds_engine"
+          - name: "engine"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_engine}"
 
-          - name: "rds_instance_class"
+          - name: "instance_class"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_postgres_instance_class}"
 
-          - name: "rds_storage_encrypted"
+          - name: "storage_encrypted"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_storage_encrypted}"
 
-          - name: "rds_engine_version"
+          - name: "engine_version"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_engine_version}"
 
-          - name: "rds_replica_count"
+          - name: "replica_count"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_replica_count}"
 
-          - name: "rds_skip_final_snapshot"
+          - name: "skip_final_snapshot"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_skip_final_snapshot}"
 
-          - name: "rds_vpc_id"
+          - name: "vpc_id"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_rdbms_vpc_id}"
 
           - name: "vpc_cidr"
@@ -228,16 +228,19 @@ spec:
           - name: "dbdeploy_name_prefix"
             value: "${ARGOCD_ENV_security_netbird_dbdeploy_name_prefix}"
 
-          - name: "db_backup_retention_period"
+          - name: "backup_retention_period"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_backup_retention_period}"
 
-          - name: "db_preferred_backup_window"
+          - name: "preferred_backup_window"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_preferred_backup_window}"
 
-          - name: "db_storage_type"
+          - name: "preferred_maintenance_window"
+            value: "${ARGOCD_ENV_security_netbird_rds_provider_preferred_maintenance_window}"
+
+          - name: "storage_type"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_storage_type}"
 
-          - name: "db_storage_iops"
+          - name: "storage_iops"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_storage_iops}"
 
           - name: "externalservice_name"
@@ -258,5 +261,5 @@ spec:
           - name: "capi_cluster_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
 
-          - name: "db_port"
+          - name: "port"
             value: "5432"
