--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -51,8 +51,8 @@ resources:
   # deploy-env
   - ../../../base/deploy-env.yaml
   # monitoring
-  - ../../../base/monitoring-pre.yaml
-  - ../../../base/monitoring.yaml
-  - ../../../base/monitoring-post-config.yaml
+  # - ../../../base/monitoring-pre.yaml
+  # - ../../../base/monitoring.yaml
+  # - ../../../base/monitoring-post-config.yaml
   # k8s
   - ../../../base/k8s-post-config.yaml
