--- a/gitops/argo-apps/base/zitadel-pre.yaml
+++ b/gitops/argo-apps/base/zitadel-pre.yaml
@@ -166,22 +166,22 @@ spec:
           - name: "rds_postgres_storage_size"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_postgres_storage_size}"
 
-          - name: "rds_engine"
+          - name: "engine"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_engine}"
 
-          - name: "rds_instance_class"
+          - name: "instance_class"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_postgres_instance_class}"
 
-          - name: "rds_storage_encrypted"
+          - name: "storage_encrypted"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_storage_encrypted}"
 
-          - name: "rds_engine_version"
+          - name: "engine_version"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_engine_version}"
 
-          - name: "rds_replica_count"
+          - name: "replica_count"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_replica_count}"
 
-          - name: "rds_skip_final_snapshot"
+          - name: "skip_final_snapshot"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_skip_final_snapshot}"
 
           - name: "vpc_id"
@@ -190,7 +190,7 @@ spec:
           - name: "vpc_cidr"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_vpc_cidr}"
 
-          - name: "rds_subnet_list"
+          - name: "subnet_list"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_rdbms_subnet_list}"
 
           - name: "cloud_region"
