--- a/gitops/applications/base/kyverno/kyverno-values.yaml
+++ b/gitops/applications/base/kyverno/kyverno-values.yaml
@@ -27,8 +27,8 @@ reportsController:
 cleanupController:
  resources:
     limits:
-      # cpu: 500m
+      cpu: 500m
       memory: 512Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 64Mi
+    requests:
+      cpu: 150m
+      memory: 256Mi
