--- a/gitops/applications/base/gitlab-pre/objectstorage.yaml
+++ b/gitops/applications/base/gitlab-pre/objectstorage.yaml
@@ -9,7 +9,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "git-lfs-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -18,6 +17,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_git_lfs_storage_size}"
 ---
@@ -31,7 +31,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-artifacts-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -40,6 +39,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_artifacts_storage_size}"
 ---
@@ -53,7 +53,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-uploads-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -62,6 +61,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_uploads_storage_size}"
 ---
@@ -75,7 +75,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-packages-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -84,6 +83,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_packages_storage_size}"
 ---
@@ -97,7 +97,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "registry-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -106,6 +105,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_registry_storage_size}"
 ---
@@ -119,7 +119,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-mr-diffs-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -128,6 +127,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_mrdiffs_storage_size}"
 ---
@@ -141,7 +141,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-ci-secure-files-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -150,6 +149,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_cisecurefiles_storage_size}"
 ---
@@ -163,7 +163,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-terraform-state-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -172,6 +171,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_tfstate_storage_size}"
 ---
@@ -185,7 +185,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-dependency-proxy-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -194,6 +193,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_dep_proxy_storage_size}"
 ---
@@ -207,7 +207,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-runner-cache-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -216,6 +215,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
@@ -229,7 +229,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-backups-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -238,6 +237,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
@@ -251,7 +251,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "gitlab-backups-tmp-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_gitlab_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -260,6 +259,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_gitlab_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_gitlab_runner_cache_storage_size}"
 ---
