--- a/gitops/applications/base/monitoring-pre/object-storage.yaml
+++ b/gitops/applications/base/monitoring-pre/object-storage.yaml
@@ -9,7 +9,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "mimir-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_monitoring_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -18,6 +17,7 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_monitoring_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_mimir_bucket_storage_size}"
 ---
@@ -31,7 +31,6 @@ spec:
     clusterName: ${ARGOCD_ENV_cluster_name}
     objectStoreProvider: ${ARGOCD_ENV_object_storage_provider}
     bucketName: "loki-${ARGOCD_ENV_cluster_name}"
-    Namespace: ${ARGOCD_ENV_monitoring_namespace}
     s3:
       awsProviderName: "aws-cp-upbound-provider-config"
       bucketRegion: ${ARGOCD_ENV_cloud_region}
@@ -40,5 +39,6 @@ spec:
     ceph:
       scK8sProviderName: ${ARGOCD_ENV_sc_provider_config_name}
       ccK8sProviderName: "kubernetes-provider"
+      namespace: ${ARGOCD_ENV_monitoring_namespace}
       storageClassName: "ceph-bucket"
       maxSize: "${ARGOCD_ENV_loki_bucket_storage_size}"
